--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "start": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.19.0"
   },
   "devDependencies": {
     "eslint": "^6.4.0",
@@ -16,6 +19,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.10.1"
   }
 }
